Implemented unit testing